<resources>
    <string name="app_name">Calculator_Android</string>

    <!-- Numbers -->
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>

    <!-- Operators -->
    <string name="addition">+</string>
    <string name="subtraction">-</string>
    <string name="multiplication">×</string>
    <string name="division">÷</string>
    <string name="exponent">^</string>
    <string name="decimal">.</string>
    <string name="clear">C</string>
    <string name="delete"> &lt;</string>
    <string name="equation">=</string>
    <string name="left_paren">(</string>
    <string name="right_paren">)</string>
    <string name="factorial">!</string>
    <string name="log">㏒</string>
    <string name="ln">㏑</string>
    <string name="percentage">%</string>

    <string name="display">Enter a value</string>
</resources>